syntax = "proto2";

option csharp_namespace = "Restaurant.SvcOrder.Repositories.Orders.SourceEvents";

message OrderCreatedV1 {
  required string order_id = 1;
}
